--- a/src/blocks/Footer/Footer.scss
+++ b/src/blocks/Footer/Footer.scss
@@ -73,7 +73,7 @@
   }
 }
 
-@media (max-width: 650px) {
+@media (max-width: 750px) {
   .Footer {
     display: block;
     margin-bottom: 10px;
