--- a/src/blocks/Header/Header.scss
+++ b/src/blocks/Header/Header.scss
@@ -83,7 +83,7 @@
 }
 
 
-@media (max-width: 850px) {
+@media (max-width: 750px) {
   .Header {
     justify-content: space-between;
     padding: 0 20px;
