--- a/src/blocks/MusicWidget/MusicWidget.scss
+++ b/src/blocks/MusicWidget/MusicWidget.scss
@@ -116,54 +116,15 @@
   }
 }
 
-@mixin rangeTrack($background-image, $height, $border-radius) {
-  appearance: none;
-  height: $height;
-  background-image: $background-image;
-  border-radius: $border-radius;
-  box-sizing: border-box;
-}
+@media (max-width: 750px) {
+  .MusicWidget {
+    &-TrackSwitcher {
+      min-width: 130px;
+    }
 
-@mixin sliderTumb {
-  appearance: none;
-  width: 60px;
-  height: 60px;
-  border-radius: 50%;
-  top: 0;
-  left: 200px;
-  background-color: transparent;
-  cursor: pointer;
-  box-sizing: border-box;
-  border: 3px solid rgba(51, 51, 51, 0.1);
-  box-shadow: 0 0 0 4px #{$background-color_primary};
-}
-
-.MusicRangeInput {
-  // @include rangeTrack(#979797);
-
-  // &::-moz-range-track {
-  //   @include rangeTrack(#979797);
-  // }
-
-  //   &_type_sun {
-  //     @include rangeTrack(linear-gradient(90deg, #ffe88c 0%, #ffb100 100%));
-
-  //     &::-moz-range-track {
-  //       @include rangeTrack(linear-gradient(90deg, #ffe88c 0%, #ffb100 100%));
-  //     }
-  //   }
-
-  //   &::-webkit-slider-thumb {
-  //     @include sliderTumb();
-  //   }
-
-  //   &::-moz-range-thumb {
-  //     @include sliderTumb();
-  //   }
-  // }
-
-  // &-Filter {
-  //   display: flex;
-  // }
+    .ButtonSwitch_type_next {
+      margin-left: 20px;
+    }
+  }
 }
 
