--- a/src/main.scss
+++ b/src/main.scss
@@ -39,6 +39,7 @@ body {
   right: 0;
   top: 0;
   min-height: 100%;
+  overflow-x: hidden;
 }
 
 *:active,
